<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppMainColor"
    tools:context=".ui.dashboard.ItemDetailsActivity">

    <ImageView
        android:id="@+id/itemImageView"
        android:layout_width="363dp"
        android:layout_height="335dp"
        android:layout_marginTop="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/item_details"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextViewItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemImageView" />

    <TextView
        android:id="@+id/priceTextViewItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="313dp"
        android:layout_marginBottom="71dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/price"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/descTextViewItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/descTextViewItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="256dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/categoryTextViewItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/categoryTextViewItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="279dp"
        android:layout_marginBottom="137dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>