<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E304C">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:layout_marginBottom="21dp"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/white"
        app:boxStrokeWidth="3dp"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/passwordEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:layout_marginBottom="11dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="3dp"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleDrawable="@drawable/ic_baseline_lock_24"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    \

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="114dp"
        android:layout_height="55dp"
        android:layout_marginBottom="168dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="Login Screen"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/ask_sign_up"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/signButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/signButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="114dp"
        android:layout_height="55dp"
        android:layout_marginBottom="76dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:strokeColor="@color/white"
        android:textSize="15sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="29dp"
        android:shadowColor="@color/white"
        android:text="@string/chechbox_signin"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>