<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E304C">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameEditTextReg"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="0dp"
        app:startIconTint="@color/white"
        android:layout_marginBottom="27dp"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/white"
        app:boxStrokeWidth="3dp"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditTextReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_marginBottom="27dp"
        android:hint="@string/email_address"
        android:textColorHint="@color/white"
        app:startIconTint="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/white"
        app:boxStrokeWidth="3dp"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/usernameEditTextReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="63dp"
        android:layout_marginBottom="27dp"
        android:hint="@string/full_name"
        android:backgroundTint="@color/white"
        android:foregroundTint="@color/white"
        app:startIconTint="@color/white"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/white"
        app:boxStrokeWidth="3dp"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_person_outline_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextReg"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="0dp"
        app:startIconTint="@color/white"
        android:layout_marginBottom="27dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/white"
        app:boxStrokeWidth="3dp"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/dobEditTextReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dobEditTextReg"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="0dp"
        app:startIconTint="@color/white"
        android:layout_marginBottom="27dp"
        android:hint="@string/dob"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/white"
        app:boxStrokeWidth="3dp"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/signupButtonReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_date_range_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="Create an Account"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/nameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signupButtonReg"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="114dp"
        android:layout_height="55dp"
        android:layout_marginBottom="76dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/white" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/ask_log_in"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/loginButtonReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButtonReg"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="114dp"
        android:layout_height="55dp"
        android:layout_marginBottom="96dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>