<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_gravity="center_horizontal"
    android:id="@+id/cardView"
    android:layout_height="330dp"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="1dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="160dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_gravity="center"
                android:textColor="@color/orange"
                android:textSize="14sp"
                android:textStyle="normal" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addCartButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:text="@string/add_to_cart"
                android:textColor="@color/teal_200"
                app:cornerRadius="10dp"
                app:strokeColor="@color/black" />

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>

